--- a/.travis.yml
+++ b/.travis.yml
@@ -2,13 +2,11 @@
 # * https://www.objc.io/issues/6-build-tools/travis-ci/
 # * https://github.com/supermarin/xcpretty#usage
 
-osx_image: xcode7.3
-language: objective-c
-# cache: cocoapods
-# podfile: Example/Podfile
-# before_install:
-# - gem install cocoapods # Since Travis is not always on latest version
-# - pod install --project-directory=Example
+language: swift
+osx_image: xcode9.4
+
+before_install:
+ - gem install cocoapods
+
 script:
-- set -o pipefail && xcodebuild test -enableCodeCoverage YES -workspace Example/ToastCollectionView.xcworkspace -scheme ToastCollectionView-Example -sdk iphonesimulator9.3 ONLY_ACTIVE_ARCH=NO | xcpretty
-- pod lib lint
+- set -o pipefail && xcodebuild test -enableCodeCoverage YES -workspace Example/ToastCollectionViewCell.xcworkspace -scheme ToastCollectionViewCell-Example -sdk iphonesimulator -destination 'platform=iOS Simulator,name=iPhone 8,OS=11.4' ONLY_ACTIVE_ARCH=NO | xcpretty
